#254 Fix padding on small/middle width

--- a/server/http-dashboard/app/components/Layout/components/Content/styles.less
+++ b/server/http-dashboard/app/components/Layout/components/Content/styles.less
@@ -1,4 +1,7 @@
 .user-layout--content {
   width: 100%;
   padding: 20px 228px 48px 108px;
+  @media (max-width: 1200px) {
+    padding: 20px 48px 48px 48px;
+  }
 }
